# java-breakpoint-breakout

./: CMakeLists.txt  README.md  helper.py
include/: java.hpp
include/breakpoints/: breakpoint_info.hpp  breakpoints.hpp  bytecode_info.hpp
include/classes/: bytecode.hpp  frame.hpp  klass.hpp  method.hpp  mirror.hpp  thread.hpp
include/utility/: hook.hpp  java_macros.hpp  vm_calls.hpp
paper/: README.md
src/: java.cpp  main.cpp
src/breakpoints/: breakpoint_info.cpp  breakpoints.cpp  bytecode_info.cpp
src/classes/: bytecode.cpp  klass.cpp  method.cpp
src/utility/: hook.cpp  naked_hook.asm  vm_calls.cpp
